--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,9 @@
 	<groupId>com.qa</groupId>
 	<artifactId>DfeSw5-Maven</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<properties>
-	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
-	</properties>
+	<!-- <properties> <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
+		<java.version>1.8</java.version> <maven.compiler.source>${java.version}</maven.compiler.source> 
+		<maven.compiler.target>${java.version}</maven.compiler.target> </properties> -->
 
 	<dependencies>
 		<!-- testing dependency -->
@@ -31,7 +28,7 @@
 
 	</dependencies>
 
-	<build>
+<!-- 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -68,6 +65,6 @@
 				</executions>
 			</plugin>
 		</plugins>
-	</build>
+	</build> -->
 
 </project>
