--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 			<version>4.13.1</version>
 			<scope>test</scope>
 		</dependency>
+
 		<!-- mysql connection dependency -->
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
@@ -28,43 +29,14 @@
 
 	</dependencies>
 
-<!-- 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.2.0</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>com.qa.main.Runner</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<archive>
-								<manifest>
-									<mainClass>com.qa.main.Runner</mainClass>
-								</manifest>
-							</archive>
-							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
-							</descriptorRefs>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build> -->
+	<!-- <build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+		<artifactId>maven-jar-plugin</artifactId> <version>3.2.0</version> <configuration> 
+		<archive> <manifest> <mainClass>com.qa.main.Runner</mainClass> </manifest> 
+		</archive> </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+		<artifactId>maven-assembly-plugin</artifactId> <executions> <execution> <phase>package</phase> 
+		<goals> <goal>single</goal> </goals> <configuration> <archive> <manifest> 
+		<mainClass>com.qa.main.Runner</mainClass> </manifest> </archive> <descriptorRefs> 
+		<descriptorRef>jar-with-dependencies</descriptorRef> </descriptorRefs> </configuration> 
+		</execution> </executions> </plugin> </plugins> </build> -->
 
 </project>
